--- a/ConfigurableDifficulty.csproj
+++ b/ConfigurableDifficulty.csproj
@@ -5,21 +5,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BepInEx.Analyzers" Version="1.0.6">
+    <PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="BepInEx.Core" Version="5.4.16" />
-    <PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.1-r.0" />
+    <PackageReference Include="BepInEx.Core" Version="5.4.19" />
+    <PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.4-r.0" />
     <PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
+    <PackageReference Include="MMHOOK.RoR2" Version="2022.9.20">
+      <NoWarn>NU1701</NoWarn>
+    </PackageReference>
+    <PackageReference Include="R2API.Core" Version="5.0.10" />
+    <PackageReference Include="R2API.Language" Version="1.0.1" />
+    <PackageReference Include="R2API.RecalculateStats" Version="1.2.0" />
+    <PackageReference Include="R2API.Difficulty" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="MMHOOK_RoR2">
-      <HintPath>..\..\..\..\Risk of Rain 2\Modding References\MMHOOK_RoR2.dll</HintPath>
-    </Reference>
-    <Reference Include="R2API">
-      <HintPath>..\..\..\..\Risk of Rain 2\Modding References\R2API.dll</HintPath>
+    <Reference Include="MysticsRisky2Utils">
+      <HintPath>..\..\..\..\Risk of Rain 2\Modding References\MysticsRisky2Utils.dll</HintPath>
     </Reference>
   </ItemGroup>
 
