--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,10 @@
   "dependencies": [
     "bbepis-BepInExPack-5.4.19",
     "RiskofThunder-HookGenPatcher-1.2.3",
-    "tristanmcpherson-R2API-4.2.1"
+    "TheMysticSword-MysticsRisky2Utils-2.0.12",
+    "RiskofThunder-R2API_Core-5.0.6",
+    "RiskofThunder-R2API_Difficulty-1.1.2",
+    "RiskofThunder-R2API_Language-1.0.0",
+    "RiskofThunder-R2API_RecalculateStats-1.2.0"
   ]
 }
